src/snapshots/serde_ndim__ndarray__tests__bool_array.snap
---
source: src/ndarray.rs
expression: "roundtrip!(ArrayD<bool>, [[[true, false], [false, true]]]).unwrap()"
---
[[[true, false],
  [false, true]]]
