src/snapshots/serde_ndim__ndarray__tests__inner_mismatch.snap
---
source: src/ndarray.rs
expression: "deserialize_json!([[[1, 2, 3, 4], [5, 6, 7, 8]], [9, 10]]).unwrap_err()"
---

 1 | [[[1, 2, 3, 4], [5, 6, 7, 8]], [9, 10]]
   |                                  ^ invalid type: a single number, expected a sequence at line 1 column 33

