src/snapshots/serde_ndim__ndarray__tests__inner_mismatch_during_first_descent.snap
---
source: src/ndarray.rs
expression: "deserialize_json!([[[1, 2, 3, [4]]]]).unwrap_err()"
---

 1 | [[[1, 2, 3, [4]]]]
   |              ^ invalid type: sequence, expected a single number at line 1 column 13

