src/snapshots/serde_ndim__ndarray__tests__invalid_type.snap
---
source: src/ndarray.rs
expression: "roundtrip!(ArrayD<i32>, [[['a']]]).unwrap_err()"
---

   | [
   |   [
   |     [
 4 |       "a"
   |          ^ invalid type: string "a", expected a sequence or a single number at line 4 column 9
   |     ]
   |   ]
   | ]
