src/snapshots/serde_ndim__ndarray__tests__larger_dimension_count.snap
---
source: src/ndarray.rs
expression: "roundtrip!(Array3 < i32 >, [[[[1, 2, 3], [4, 5, 6]]]]).unwrap_err()"
---

   | [
   |   [
   |     [
 5 |       1,
   |       ^ maximum dims of 3 exceeded at line 5 column 8
   |       2,
   |       3
   |     ],

