src/snapshots/serde_ndim__ndarray__tests__sample.snap
---
source: src/ndarray.rs
expression: array
---
[[[1, 2, 3, 4],
  [5, 6, 7, 8]],

 [[9, 10, 11, 12],
  [13, 14, 15, 16]],

 [[17, 18, 19, 20],
  [21, 22, 23, 24]]]
