src/snapshots/serde_ndim__ndarray__tests__smaller_dimension_count.snap
---
source: src/ndarray.rs
expression: "deserialize_json!(Array3 < i32 >, [[1, 2, 3], [4, 5, 6]]).unwrap_err()"
---

 1 | [[1, 2, 3], [4, 5, 6]]
   |    ^ didn't reach the expected minimum dims 3, got 2 at line 1 column 3

