src/snapshots/serde_ndim__ndarray__tests__static_array_in_non_standard_layout.snap
---
source: src/ndarray.rs
expression: json
---
[
  [
    1,
    4
  ],
  [
    2,
    5
  ],
  [
    3,
    6
  ]
]
