src/snapshots/serde_ndim__ndarray__tests__type_mismatch.snap
---
source: src/ndarray.rs
expression: "roundtrip!(ArrayD<i32>, [[[false]]]).unwrap_err()"
---

   | [
   |   [
   |     [
 4 |       false
   |            ^ invalid type: boolean `false`, expected i32 at line 4 column 11
   |     ]
   |   ]
   | ]
